--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>11</java.version>
         <maven.compiler.version>3.6.0</maven.compiler.version>
-        <karate.version>0.9.4</karate.version>
+        <karate.version>0.9.5.RC3</karate.version>
     </properties>    
 
     <dependencies>
@@ -33,6 +33,12 @@
             <version>5.4.0</version>
             <scope>test</scope>
         </dependency>        		
+        <!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
+        <dependency>
+            <groupId>net.masterthought</groupId>
+            <artifactId>cucumber-reporting</artifactId>
+            <version>5.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
